# zenlang

./: .env.local  .gitignore  Cargo.toml  IMPROVEMENTS.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SELF_HOSTING_STATUS.md  STYLE_GUIDE.md  ZEN_GUIDE.md  bootstrap.zen  inkwell.md  lang.md  meta_agent.py  test_debug.rs  test_error.zen  test_output.txt  test_type_alias.zen  test_valid.zen  todo-multi-backend-refactor.md  todos.md
.agent/: completion_summary.md  current_plan.md  enum_improvements.md  generic_types_plan.md  generics_design.md  github_issues_to_create.md  global_memory.md  pattern_matching_plan.md  plan.md  progress-2025-08-23-pattern-matching-fix.md  progress.md  progress_2025-08-27.md  progress_generic_types.md  progress_report_2025_08_26.md  progress_report_2025_08_27.md  progress_summary.md  progress_today.md  progress_update_2025_08_23.md  project_status.md  scratchpad.md  session_6_summary.md  session_summary.md  session_summary_2025-08-23.md  session_summary_2025-08-27.md  session_summary_2025-08-27_complete.md  session_summary_2025-08-27_final.md  session_summary_20250827_3.md  session_summary_2025_08_28_final.md  summary.md  todos.md  zen_language_reference.md
agent/: debug_parse_issue.md  debug_parser.rs  minimal_loop_test.rs  progress-2025-08-23-pattern-matching.md  progress-2025-08-23-segfault-fix.md  project_plan.md  prompt.md  ralph.sh  test_loop_debug.rs  test_struct_parser.rs  visualize.ts
better-ui/: .gitignore
docs/: SELF_HOSTING_GUIDE.md  STYLE_GUIDE.md  ZEN_GUIDE.md  lang.md
examples/: 01_basics_working.zen  01_hello_world.zen  (+38 more)
(+219 files in other folders)
